@@ -99,6 +99,8 @@ Release ...
 * stty: If the system does not support split input/output speed, the 'ispeed'
   and 'ospeed' operands have no effect if both are given.
 * tabs: The -T option had no effect. Its argument is now required.
+* wc: Use a column-aligned output format for the POSIX version too since the
+  standard does not actually disallow it.
 
 Release 050123
 * tr: The highest acceptable wide character for complementing strings is now
